Native/Test/KL/assign-to-rvalue-arg.out
assign-to-rvalue-arg.kl:7:3: error: expression is not an l-value
