Native/Test/KL/assign-to-rvalue-arg.kl
/*
 *  Copyright 2010-2012 Fabric Engine Inc. All rights reserved.
 */

function foo( in Integer rval )
{
  rval = rval;
}
